--- a/app.json
+++ b/app.json
@@ -1,35 +1,30 @@
 {
-    "name": "𝗔𝗟𝗣𝗛𝗔 𝗨𝗦𝗘𝗥𝗕𝗢𝗧",
-    "logo": "https://telegra.ph/file/1a1dae69a11e98c47c34e.jpg",
-    "description": "An first Telegram Userbot with multi Clients for Spamming or Mass.",
-    "keywords": ["pyrogram", "userbot"],
-    "repository": "https://github.com/TEAMPURVI/ALPHA_USERBOT",
+  "name": "Owner",
+  "logo": "https://telegra.ph/file/1a1dae69a11e98c47c34e.jpg",
+  "description": "Telegram Userbot",
+  "keywords": ["pyrogram", "userbot"],
+  "repository": "https://github.com/chraj0111-wq/Owner",
   "stack": "container",
-    "env": {
-        "STRING_SESSION1": {
-            "description": "fill with the Pyrogram v2 session string",
-            "required": true
-        },
-        "MONGO_URL": {
-            "description": "Fill there an mongo database from mongodb.com",
-            "required": true,
-            "value": "mongodb+srv://vivek:1234567890@cluster0.c48d8ih.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
-        },
-        "SUDO_USERS": {
-            "description": "don't Change this there /id",
-            "required": true,
-            "value": "6051510669"
-        },
-        "OWNER_ID": {
-            "description": "Fill there your I'd",
-            "required": true,
-            "value": "6051510669"
-        },
-        "BOT_TOKEN": {
-            "description": "fill with your bot token get from @BotFather on telegram",
-            "required": true,
-            "value": ""
-        }
-
+  "env": {
+    "STRING_SESSION1": {
+      "description": "Fill with your Pyrogram v2 session string",
+      "required": true
+    },
+    "MONGO_URL": {
+      "description": "Fill your MongoDB URL",
+      "required": true
+    },
+    "SUDO_USERS": {
+      "description": "Enter your Telegram User ID",
+      "required": true
+    },
+    "OWNER_ID": {
+      "description": "Enter your Telegram User ID",
+      "required": true
+    },
+    "BOT_TOKEN": {
+      "description": "Get from @BotFather",
+      "required": true
     }
   }
+}
